--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p id="note">Note: Click on each of the buttons to see how the cocosd model works.</p>
         </h1>
         <br><br><br><br><br>
-        <a href="" class="btn my_button">Toys</a>
+        <a href="fruits.html" class="btn my_button">Fruits</a>
         <br>
         <a href="" class="btn my_button">Break</a>
         <br>
