--- a/index.html
+++ b/index.html
@@ -23,16 +23,15 @@
         <br><br><br><br><br>
         <a href="fruits.html" class="btn my_button">Fruits</a>
         <br>
-        <a href="" class="btn my_button">Break</a>
+        <a href="toys.html" class="btn my_button">Toys</a>
         <br>
-        <a href="" class="btn my_button">Break</a>
-        <br>
-        <a href="" class="btn my_button">Break</a>
-        <br>
-        <a href="" class="btn my_button">Break</a>
+        <a href="office.html" class="btn my_button">Office</a>
+     <br>
+     <a href="kitchen.html" class="btn my_button">Kitchen</a>
+     <br>
+     <a href="plants.html" class="btn my_button">Plants</a>
     </center>
 
-    <script src="main.js"></script>
 
 </body>
 
